# euphony

./: .coveralls.yml  .gitignore  .gitmodules  .project  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EUPHONY_UI.md  GETTING_STARTED.md  GETTING_STARTED_KR.md  HOWTOBUILD.md  LICENSE.txt  PREREQUISITE.md  README.md  _config.yml  build.gradle  gradle.properties  import-summary.txt  index.md  publish-root.gradle  sample_app_proposal.yml  settings.gradle
.github/ISSUE_TEMPLATE/: Documentation.yaml  bug-report.yaml  config.yaml  config.yml  documentation.yaml  feature_request.yaml  free_issue.md  sample_app_proposal.yaml
Euphony/: build.gradle
Euphony/src/main/cpp/: CMakeLists.txt  EpnyAudioStreamCallback.h  EpnyFFTProcessor.cpp  EpnyFFTProcessor.h  EpnyFrequency.cpp  EpnyOscillator.h  EpnyRxEngine.cpp  EpnyRxEngine.h  EpnySoundGenerator.cpp  EpnySoundGenerator.h  EpnyTxEngine.cpp  EpnyTxEngine.h  IFFTProcessor.h  kiss_fftr.c  native-connector.cpp  native-legacy.cpp
Euphony/src/main/cpp/core/: FFTProcessor.h  Frequency.h  Oscillator.h  SoundGenerator.h  TxEngine.h  WaveGenerator.h
Euphony/src/main/cpp/core/source/: AudioStreamCallback.cpp  RxEngine.cpp  SoundGenerator.cpp  TxEngine.cpp  WaveGenerator.cpp
Euphony/src/main/cpp/debug-helper/: Trace.h
_layouts/: default.html
app/: build.gradle
assets/css/: main.css
docs/: index.html
euphony/: build.gradle  publish.gradle
euphony/src/main/cpp/: CMakeLists.txt  native-connector.cpp  native-legacy.cpp
euphony/src/main/cpp/arms/: kiss_fft.c  kiss_fft.h  kiss_fftr.c
euphony/src/main/cpp/arms/sl-headers/: DefaultAudioStreamCallback.h
euphony/src/main/cpp/core/: ASCIICharset.h  ASK.h  AudioStreamCallback.h  Base.h  Base16.h  Base2.h  Base32.h  Base32Exception.h  Base64.h  BaseCodec.h  BaseFactory.h  BinaryCodec.h  BlueFFT.h  Charset.h  DefaultCharset.h  Definitions.h  EuPIOscillator.h  EuPIRenderer.h  EuphonyAudioSource.h  FFTModel.h  FFTProcessor.h  FSK.h  Frequency.h  HexVector.cpp  HexVector.h  IFFTProcessor.h  Modem.h  ModemFactory.h  Oscillator.h  Packet.h  PacketBuilder.h  PacketErrorDetector.h  RxEngine.cpp  RxEngine.h  TxEngine.cpp  TxEngine.h  UTF16Charset.h  UTF8Charset.h  WakeUpFFTSensor.h  WakeUpSensor.h  (+4 more)
euphony/src/main/cpp/core/base/: Base16.cpp  Base16Exception.cpp  Base16Exception.h  Base2.cpp  Base32.cpp  Base32Exception.cpp  Base64.cpp  Base64Exception.cpp  Base64Exception.h  BaseFactory.h
euphony/src/main/cpp/core/charset/: ASCIICharset.cpp  CharsetAutoSelector.cpp  CharsetAutoSelector.h  DefaultCharset.cpp  README.md  UTF16Charset.cpp  UTF16Charset.h  UTF32Charset.cpp  UTF32Charset.h  UTF8Charset.cpp
euphony/src/main/cpp/core/fft/: BlueFFT.cpp  BlueFFT.h  FFTHelper.cpp  FFTHelper.h  FFTModel.cpp  FFTModel.h  FFTProcessor.cpp  FFTProcessor.h
euphony/src/main/cpp/core/modem/: ASK.cpp  ASK.h  FSK.cpp  FSK.h  Modem.h  ModemFactory.h
euphony/src/main/cpp/core/packet/: Packet.cpp  Packet.h  PacketBuilder.cpp  PacketErrorDetector.cpp  PacketErrorDetector.h
euphony/src/main/cpp/core/renderer/: EuPIOscillator.cpp  EuPIOscillator.h  EuPIRenderer.cpp  EuPIRenderer.h  WaveRenderer.cpp  WaveRenderer.h
euphony/src/main/cpp/core/source/: ASCIICharset.cpp  ASK.cpp  Base16.cpp  Base16Exception.cpp  Base2.cpp  Base32.cpp  Base32Exception.cpp  Base64.cpp  Base64Exception.cpp  BlueFFT.cpp  DefaultCharset.cpp  EuPIOscillator.cpp  EuPIRenderer.cpp  FFTHelper.cpp  FFTModel.cpp  FFTProcessor.cpp  FSK.cpp  Frequency.cpp  HexVector.cpp  Oscillator.cpp  Packet.cpp  PacketBuilder.cpp  PacketErrorDetector.cpp  RxEngine.cpp  TxEngine.cpp  UTF16Charset.cpp  UTF32Charset.cpp  UTF8Charset.cpp  WakeUpFFTSensor.cpp  Wave.cpp  WaveBuilder.cpp  WaveGenerator.cpp  WaveRenderer.cpp
euphony/src/main/cpp/core/wakeup/: WakeUpFFTSensor.cpp  WakeUpFFTSensor.h
euphony/src/main/cpp/core/wave/: Wave.cpp  Wave.h  WaveBuilder.cpp
euphony/src/main/cpp/debug-helper/: Log.h
euphony/src/main/cpp/tests/: ASKTest.cpp  BlueFFTTest.cpp  CMakeLists.txt  FFTHelperTest.cpp  FFTProcessorTest.cpp  FFTTest.cpp  FSKTest.cpp  README.md  asciiCharsetTest.cpp  base16DecoderTest.cpp  base16EncoderTest.cpp  base16Test.cpp  base2Test.cpp  base32Test.cpp  base64Test.cpp  cmake.run.test.script  decoderTest.cpp  defaultCharsetTest.cpp  encoderTest.cpp  hexVectorTest.cpp  packetBuilderTest.cpp  packetErrorDetectorTest.cpp  packetTest.cpp  packetWithFSKTest.cpp  utf16CharsetTest.cpp  utf32CharsetTest.cpp  utf8CharsetTest.cpp  wakeUpFFTSensorTest.cpp  waveBuilderTest.cpp  waveRendererTest.cpp  waveTest.cpp
euphony/src/main/cpp/tests/base/: base16Test.cpp  base2Test.cpp  base32Test.cpp  base64Test.cpp
euphony/src/main/cpp/tests/charset/: asciiCharsetTest.cpp  charsetAutoSelectorTest.cpp  defaultCharsetTest.cpp  utf16CharsetTest.cpp  utf32CharsetTest.cpp  utf8CharsetTest.cpp
euphony/src/main/cpp/tests/fft/: BlueFFTTest.cpp  FFTHelperTest.cpp  FFTProcessorTest.cpp
euphony/src/main/cpp/tests/modem/: ASKTest.cpp  FSKTest.cpp
euphony/src/main/cpp/tests/packet/: packetBuilderTest.cpp  packetErrorDetectorTest.cpp  packetTest.cpp  packetWithFSKTest.cpp
euphony/src/main/cpp/tests/renderer/: waveRendererTest.cpp
euphony/src/main/cpp/tests/wakeup/: wakeUpFFTSensorTest.cpp
euphony/src/main/cpp/tests/wave/: waveBuilderTest.cpp  waveTest.cpp
java-sample/: build.gradle
jni/: Android.mk  _kiss_fft_guts.h  com_euphony_fft_KissFFT.h  euphony_lib_receiver_KissFFT.cpp  euphony_lib_receiver_KissFFT.h  kiss_fft.c  kiss_fftr.c
project/: build.gradle
project/src/main/cpp/: CMakeLists.txt  EpnyAudioStreamCallback.cpp  EpnyAudioStreamCallback.h  EpnyFrequency.h  EpnyOscillator.cpp  EpnyOscillator.h  EpnySoundGenerator.cpp  EpnySoundGenerator.h  EpnyTxEngine.cpp  EpnyTxEngine.h  EuphonyRx.cpp  EuphonyRx.h  EuphonyRxCore.cpp  EuphonyRxCore.h  EuphonyTx.cpp  EuphonyTx.h  EuphonyTxCore.cpp  EuphonyTxCore.h  Log.cpp  Log.h  euphony.cpp  euphony.h  kiss_fft.h  native-connector.cpp  native-legacy.cpp
research/: #index.html#  .#index.html  euphony-research.js  index.html  research.css
shutter-release/: index.html  shutter-release.css  shutter-release.js
(+261 files in other folders)
